--- a/.github/workflows/issue-managment.yml
+++ b/.github/workflows/issue-managment.yml
@@ -24,8 +24,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: read
-      # ISSUE: #1220 The next line is not valid. Check possible values for permissions.
-      project: write
+      projects: write
 
     outputs:
       labeled: ${{ steps.triage.outputs.labeled }}
