--- a/.github/workflows/issue-managment.yml
+++ b/.github/workflows/issue-managment.yml
@@ -24,7 +24,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: read
-      project: write
+      projects: write
 
     outputs:
       labeled: ${{ steps.triage.outputs.labeled }}
