Revert " fix: issue management workflow (#1221)"
This reverts commit 0e46a20e704c942b5f6fc311dc7f2abb60e6e643.

--- a/.github/workflows/issue-managment.yml
+++ b/.github/workflows/issue-managment.yml
@@ -24,7 +24,7 @@ jobs:
     permissions:
       issues: write
       pull-requests: read
-      projects: write
+      project: write
 
     outputs:
       labeled: ${{ steps.triage.outputs.labeled }}
