--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,12 +12,17 @@ on: # yamllint disable-line rule:truthy
     tags: [v*]
   workflow_dispatch:
 
+env:
+  FORCE_COLOR: "1"
+  PACKAGE_NAME: checkconnect
+  PYTHON_VERSION_FILE: .python-version
+
+defaults:
+  run:
+    shell: bash
+
 permissions:
   contents: read
-
-env:
-  PACKAGE_NAME: jmbde-python
-  PYTHON_VERSION_FILE: .python-version
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -43,6 +48,66 @@ jobs:
         if: github.event_name == 'pull_request'
         uses: actions/dependency-review-action@3b139cfc5fae8b618d3eae3675e383bb1769c019 # v4.5.0
 
+  checks:
+    name: Lint, Security, Pre-Commit, Docs Checks
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 20
+
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+
+    steps:
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+
+      - name: 🧐 Checkout Repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
+      - name: "🐍 Set up Python"
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version-file: ${{ env.PYTHON_VERSION_FILE }}
+          cache: pip
+          cache-dependency-path: |
+            pyproject.toml
+            .github/workflows/requirements.txt
+
+      - name: 🧰 Install Hatch and Dependencies
+        run: |
+          pip install -r .github/workflows/requirements.txt
+          hatch env create lint
+          hatch env create security
+          hatch env create docs
+
+      - name: 🔍 Linting
+        run: hatch run lint:all
+
+      - name: 🔐 Security Checks
+        run: hatch run security:all
+
+      - name: 🔍 Trivy Security Scan
+        uses: aquasecurity/trivy-action@master
+        with:
+          scan-type: "fs"
+          scan-ref: "."
+          severity: "CRITICAL,HIGH"
+
+      - name: 📝 Pre-Commit Hooks
+        run: hatch run lint:precommit
+
+      - name: 📚 Documentation Checks
+        run: |
+          hatch run docs:build
+          hatch run docs:validate-links
+
+      - name: 📖 Spell Check for Documentation
+        run: codespell --ignore-words-list="TODO,Nit" --skip="*.py,*.json,*.yaml,*.yml,*.toml,*.lock"
+
   ui-tests:
     name: UI Tests
     needs: validate
@@ -53,12 +118,12 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.9', '3.10', '3.11', '3.12']
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         exclude:
           - os: macos-latest
-            python-version: '3.9'
+            python-version: "3.9"
           - os: windows-latest
-            python-version: '3.9'
+            python-version: "3.9"
 
     steps:
       - name: 🔒 Harden Runner
@@ -135,7 +200,7 @@ jobs:
 
   test-and-build:
     name: Test & Build
-    needs: [validate]
+    needs: [validate, checks]
     runs-on: ubuntu-latest
     timeout-minutes: 30
     environment: production
@@ -182,10 +247,6 @@ jobs:
             libxcb-xkb1 \
             libxkbcommon-x11-0
 
-      - name: ⚙️ Setup Pre-commit
-        run: |
-          hatch run lint:prcommit
-
       - name: 📝 Get Version
         id: version
         run: |
@@ -195,22 +256,49 @@ jobs:
 
       - name: 🧪 Run Matrix Tests
         run: |
-          hatch run test:test
+          hatch test --python ${{ matrix.python-version }} --cover-quiet --randomize --parallel --retries 5 --retry-delay 3
 
-      - name: 📊 Generate Coverage Reports
-        run: hatch run test:cov
+      - name: 🔍 Disambiguate Coverage Filename
+        run: mv .coverage ".coverage.${{ matrix.os }}.${{ matrix.python-version }}"
 
-      - name: 🔍 Run Type Checks
-        run: hatch run test:typeguard
+      - name: 📤 Upload Coverage Data
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: coverage-${{ matrix.os }}-${{ matrix.python-version }}
+          path: .coverage*
 
-      - name: 📚 Run Doctests
+      - name: 📥 Download coverage
+        uses: actions/download-artifact@fa0a91b85d4f404e444e00e005971372dc801d16 # v4.1.8
+        with:
+          pattern: coverage-*
+          merge-multiple: true
+
+      - name: 🔄 Combine coverage data
+        run: hatch run coverage:combine
+
+      - name: 📊 Export coverage reports
         run: |
-          hatch run test:doctest
+          hatch run coverage:report-xml
+          hatch run coverage:report-uncovered-html
 
-      - name: 🛡️ Run Security Scans
-        run: |
-          hatch run lint:security
+      - name: 📤 Upload uncovered HTML report
+        uses: actions/upload-artifact@65c4c4a1ddee5b72f698fdd19549f0f0fb45cf08 # v4.6.0
+        with:
+          name: uncovered-html-report
+          path: htmlcov
 
+      - name: 📑 Generate coverage summary
+        run: hatch run coverage:generate-summary
+
+      - name: 📝 Write coverage summary report
+        if: github.event_name == 'pull_request'
+        run: hatch run coverage:write-summary-report
+
+      - name: 💬 Update coverage pull request comment
+        if: github.event_name == 'pull_request' && !github.event.pull_request.head.repo.fork
+        uses: marocchino/sticky-pull-request-comment@52423e01640425a022ef5fd42c6fb5f633a02728 # v2.9.1
+        with:
+          path: coverage-report.md
       - name: 🏗️ Build Package
         run: |
           hatch build
